picamera integration, simple jpeg streaming thing

--- a/photoberry/templates/start.html
+++ b/photoberry/templates/start.html
@@ -17,6 +17,10 @@
             </a>
         </p>
 
+        <p>
+            <img src="{{ url_for('video_feed') }}" width="80%">
+        </p>
+
     </div>
 
 {% endblock %}
